--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/telescope": "^5.16",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^3.3",
         "yajra/laravel-datatables-oracle": "^12.6"
